--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogapi",
+  "name": "SpeakEasyAPI",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,14 @@
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "jwt-simple": "^0.4.1",
+    "keygenerator": "^1.0.4",
     "mongojs": "^1.3.0",
     "mongoose": "^4.1.9",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "underscore": "^1.8.3"
   }
 }
