--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": ['add-module-exports', 'transform-class-properties', 'transform-decorators-legacy']
+  "presets": ["es2015", "react", "stage-0"]
 }
