--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "cors": "^2.7.1",
