--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,8 @@
     "postcss-cssnext": "^2.4.0",
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.8.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-nesting": "^2.3.0",
     "postcss-reporter": "^1.3.0",
     "psi": "^2.0.2",
     "react-addons-test-utils": "^0.14.6",
